--- a/themes/hueman/layout/common/head.ejs
+++ b/themes/hueman/layout/common/head.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
 
@@ -21,7 +22,7 @@
     %>
     <title><% if (title) { %><%= title %> | <% } %><%= config.title %></title>
     <% if (theme.plugins.bing_site_verification) { %>
-      <meta name="msvalidate.01" content="<%- theme.plugins.bing_site_verification %>" />
+    <meta name="msvalidate.01" content="<%- theme.plugins.bing_site_verification %>" />
     <% } %>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <% if (page.tags) {
@@ -30,7 +31,7 @@
             keywords.push(page.tags.data[i].name);
         }
     %>
-        <meta name="keywords" content="<%= keywords.join(',') %>" />
+    <meta name="keywords" content="<%= keywords.join(',') %>" />
     <% } %>
     <%- open_graph({
         image:          thumbnail(page),
@@ -40,13 +41,15 @@
         google_plus:    theme.miscellaneous.open_graph.google_plus,
     }) %>
     <%- meta(page) %>
+    <%- autoCanonical(config, page) %>
 
     <% if (theme.customize && theme.customize.social_links && theme.customize.social_links.rss) { %>
-        <link rel="alternate" href="<%- theme.customize.social_links.rss %>" title="<%= config.title %>" type="application/atom+xml" />
+    <link rel="alternate" href="<%- theme.customize.social_links.rss %>" title="<%= config.title %>"
+        type="application/atom+xml" />
     <% } %>
 
     <% if (theme.customize.favicon) { %>
-        <link rel="icon" href="<%- url_for(theme.customize.favicon) %>" />
+    <link rel="icon" href="<%- url_for(theme.customize.favicon) %>" />
     <% } %>
 
     <%- css('libs/font-awesome/css/font-awesome.min') %>
